--- a/00.md
+++ b/00.md
@@ -3,9 +3,14 @@
 
 Initial setup of the operating system.
 
-### 01) Xcode
+### 00) Xcode
 
     xcode-select --install
+
+### 01) Git
+
+    git config --global user.name "bavo-0"
+    git config --global user.email "bavo.email@gmail.com"
 
 ### 02) HomeBrew
 
