--- a/00.md
+++ b/00.md
@@ -9,7 +9,7 @@ Initial setup of the operating system.
 
 ### 01) Git
 
-    git config --global user.name "bavo-0"
+    git config --global user.name "bavo-git"
     git config --global user.email "bavo.email@gmail.com"
 
 ### 02) HomeBrew
