update shorts vscode settings

--- a/shortcuts/00.md
+++ b/shortcuts/00.md
@@ -3,10 +3,28 @@
 
 Some shortcuts for convenience.
 
-## Main shortcuts
+### Main
 
-`Cmd + T` - Открыть новую вкладку.
+- `Cmd + T` - Открыть новую вкладку.
 
-`Cmd + W` - Закрыть текущую вкладку.
+- `Cmd + W` - Закрыть текущую вкладку.
 
-`Cmd + Shift + T` — Восстановить последнюю закрытую вкладку.
+- `Cmd + Shift + T` - Восстановить последнюю закрытую вкладку.
+
+### Text
+
+- `Cmd + Z` - Отменить последнее действие.
+
+- `Cmd + Shift + Z` - Вернуть отменённое действие.
+
+- `Cmd + X` - Вырезать.
+
+- `Cmd + C` - Копировать.
+
+- `Cmd + V` - Вставить.
+
+&nbsp;
+
+- `Cmd + A` - Выделить всё.
+
+- `Cmd + S` - Сохранить.
