--- a/shortcuts/00.md
+++ b/shortcuts/00.md
@@ -17,6 +17,8 @@ Some shortcuts for convenience.
 
 - `Cmd + Shift + Z` - Вернуть отменённое действие.
 
+&nbsp;
+
 - `Cmd + X` - Вырезать.
 
 - `Cmd + C` - Копировать.
