--- a/shortcuts/00.md
+++ b/shortcuts/00.md
@@ -1,9 +1,13 @@
 
-# Shortcuts
+# macOS
 
 Some shortcuts for convenience.
 
-### Main
+### System
+
+- `Cmd + Space` - Системный поиск.
+
+&nbsp;
 
 - `Cmd + T` - Открыть новую вкладку.
 
@@ -11,11 +15,25 @@ Some shortcuts for convenience.
 
 - `Cmd + Shift + T` - Восстановить последнюю закрытую вкладку.
 
+- `Cmd + Сtrl + F` - Полноэкранный режим.
+
+- `Cmd + M` - Свернуть окно.
+
 ### Text
 
 - `Cmd + Z` - Отменить последнее действие.
 
 - `Cmd + Shift + Z` - Вернуть отменённое действие.
+
+&nbsp;
+
+- `Cmd + A` - Выделить всё.
+
+- `Cmd + F` - Поиск.
+
+- `Cmd + G` - Последний поиск, следующий объект.
+
+- `Cmd + Shift + G` - Последний поиск, предыдущий объект.
 
 &nbsp;
 
@@ -26,7 +44,5 @@ Some shortcuts for convenience.
 - `Cmd + V` - Вставить.
 
 &nbsp;
-
-- `Cmd + A` - Выделить всё.
 
 - `Cmd + S` - Сохранить.
