--- a/shortcuts/00.md
+++ b/shortcuts/00.md
@@ -33,7 +33,7 @@ Some shortcuts for convenience.
 
 - `Cmd + G` - Последний поиск, следующий объект.
 
-- `Cmd + Shift + G` - Последний поиск, предыдущий объект.
+- `Cmd + Shift + G` - Предыдущий объект.
 
 &nbsp;
 
